# DocValidate-APIREST

./: .gitignore  Readme.md  compose-debug.yaml  compose.yaml  makefile  pyproject.toml  requirements.txt
.github/workflows/: deploy.yaml
app/clients/: models.py  serializers.py  tests.py  urls.py  views.py  viewsets.py
app/clients/migrations/: 0001_initial.py  0002_rename_clients_client.py
app/core/: settings.py  urls.py
app/mysite/mysite/: settings.py
app/transactions/: models.py  serializers.py  tests.py  urls.py  viewsets.py
app/transactions/migrations/: 0001_initial.py
app/utils/: decorators.py  processing_images.py  viewsets.py
docker/: Dockerfile  compose.yaml
